--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,21 @@
     <title>Document</title>
 </head>
 <body>
-
-
+    <form class="search-form" id="search-form">
+        <input
+        class="input"
+          type="text"
+          name="searchQuery"
+          autocomplete="off"
+          placeholder="Search images..."
+        />
+        <button type="submit">Search</button>
+      </form>
+      <div class="gallery">
     
-    <script src="/src/index.js"></script>
+      </div>
+      <button type="button" class="load-more">Load more</button>
+
+    <script src="/src/index.js" type="module"></script>
 </body>
 </html>
