--- a/src/index.html
+++ b/src/index.html
@@ -22,5 +22,6 @@
       <button type="button" class="load-more">Load more</button>
 
     <script src="/src/index.js" type="module"></script>
+    <script src="/src/api.js"></script>
 </body>
 </html>
